# freecell

./: .clang-format  .gitignore  CMakeLists.txt  README.md  abstractcardholder.cpp  abstractcardholder.h  acespot.cpp  acespot.h  board.cpp  board.h  card.cpp  card.h  cardproxy.cpp  cardspot.cpp  cardspot.h  cardwidget.cpp  cardwidget.h  columnspot.cpp  columnspot.h  deck.cpp  deck.h  freecell.cpp  freecell.h  mainwindow.cpp  resources.qrc
resources/: resources.qrc
src/: Button.cpp  Button.h  CMakeLists.txt  acespot.cpp  board.cpp  board.h  card.cpp  card.h  cardproxy.cpp  cardproxy.h  cardwidget.h  deck.cpp  deck.h  freecell.cpp  label.cpp  label.h  main.cpp  mainwindow.cpp  mainwindow.h  move.cpp  move.h  timerLabel.cpp  timerLabel.h
